Fixed CRM contact quick edit not showing unsubscribe message, resolved #674

--- a/assets/less/admin/crm.less
+++ b/assets/less/admin/crm.less
@@ -538,6 +538,7 @@
     }
 }
 
+.erp-customer-form,
 .erp-crm-subscriber-contact,
 .erp-crm-contact-subscriber-wrap {
 
